[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "backend for remit"
default-run = "app"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.ssh2]
[dependencies.tauri]
features = ["api-all"]
[dependencies.serde]
[dependencies.serde_json]
[dependencies.once_cell]
[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies.tauri-build]

[[bin]]
name="app"
path="src/main.rs"
