[package]
name = "app"
version = "0.1.0"
edition = "2021"
description = "backend for remit"
default-run = "app"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
[dependencies.ssh2]
[dependencies.tauri]
features = ["api-all"]
[dependencies.serde]
[dependencies.serde_json]
[dependencies.once_cell]
[dependencies.windows]
features = [ "Win32_Storage_FileSystem", "Win32_Foundation", "Win32_System_Threading", "Win32_System_SystemServices",
            "Win32_Security", "Win32_System_Kernel", "Win32_System_IO"]

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[build-dependencies.tauri-build]

[[bin]]
name="app"
path="src/main.rs"
